FIX: Stretchy avatars on iOS < 15.1 (#449)

--- a/assets/stylesheets/common/common.scss
+++ b/assets/stylesheets/common/common.scss
@@ -1302,6 +1302,7 @@ body.composer-open .topic-chat-float-container {
   }
 
   .tc-avatar-container {
+    align-items: flex-start;
     display: inline-flex;
     width: 100%;
     height: auto;
